--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -30,8 +30,8 @@ env:
   TITLE: huanxi Running
   MIN_GRID_DISTANCE: 10 # change min distance here
   TITLE_GRID: Over 10km Runs # also here
-  GITHUB_NAME: "action@github.com" # default Actions bot you can change it to yours
-  GITHUB_EMAIL: "GitHub Action" # default Actions bot you can change it to yours
+  GITHUB_NAME: "shipengfish@github.com" # default Actions bot you can change it to yours
+  GITHUB_EMAIL: "shipengfish@gmail.com" # default Actions bot you can change it to yours
 
   # IGNORE_BEFORE_SAVING: True # if you want to ignore some data before saving, set this to True
   IGNORE_START_END_RANGE: 10 # Unit meter
